--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "@rad/rad-ts",
+  "name": "@rad/core",
   "version": "1.1.3",
   "type": "module",
   "license": "MIT",
-  "maintainers": ["pmttmp24@gmail.com","tranrd@unicloud.com.vn"],
-  "homepage": "https://git.sunshinetech.vn/research-team/common/front-end/radts",
+  "maintainers": [
+    "pmttmp24@gmail.com"
+  ],
+  "homepage": "https://github.com/thuanpham98/rad-core",
   "files": [
     "dist",
     "dist/*.css"
   ],
-  "publishConfig": {
-    "@rad:registry": "https://git.sunshinetech.vn/api/v4/projects/1621/packages/npm/"
-  },
-  "main": "./dist/rad-ts.cjs",
-  "module": "./dist/rad-ts.js",
+  "main": "./dist/rad-core.cjs",
+  "module": "./dist/rad-core.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/rad-ts.js",
-      "require": "./dist/rad-ts.cjs"
+      "import": "./dist/rad-core.js",
+      "require": "./dist/rad-core.cjs"
     },
     "./dist/*.css": {
       "import": "./dist/*.css",
@@ -26,36 +25,23 @@
     }
   },
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "format": "npx prettier --write ./src"
+    "build": "tsc && prettier --write src/ && eslint src/ && vite build"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.29.2",
-    "i18next": "^22.4.11",
-    "i18next-browser-languagedetector": "^7.0.1",
-    "i18next-http-backend": "^2.1.1",
     "path": "^0.12.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^12.2.0",
-    "rxjs": "^7.8.0",
     "tslib": "^2.5.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/node": "^20.6.3",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-react-swc": "^3.3.1",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "typescript": "^5.0.4",
+    "typescript": "^5.2.2",
     "vite": "^4.3.2",
     "vite-plugin-dts": "^2.3.0",
-    "vite-plugin-svgr": "^3.2.0"
+    "vite-plugin-svgr": "^3.2.0",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^8.9.0",
+    "prettier": "3.0.0"
   }
+
 }
