--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@radts/core",
-  "version": "1.1.3",
+  "version": "1.1.6",
   "type": "module",
   "license": "MIT",
   "maintainers": [
@@ -22,6 +22,7 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/radts-core.js",
       "require": "./dist/radts-core.cjs"
     },
@@ -38,15 +39,15 @@
     "tslib": "^2.5.0"
   },
   "devDependencies": {
-    "@types/node": "^20.6.3",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
+    "@types/node": "^20.7.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
     "eslint": "^8.46.0",
-    "eslint-config-prettier": "^8.9.0",
-    "prettier": "3.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "prettier": "3.0.3",
     "typescript": "^5.2.2",
     "vite": "^4.3.2",
-    "vite-plugin-dts": "^2.3.0"
+    "vite-plugin-dts": "^3.6.0"
   },
   "description": "This library aims to create a hybrid between framework and library, providing faster and better quality web building tools.",
   "repository": {
